css/tealeg.css
.tag-cloud-tags div {
    display: inline-block;
    padding: 6px;
    border: 8px;
}

.tag-cloud-tags div { transform:rotate(5deg); }
.tag-cloud-tags div:nth-child(2n) { transform:rotate(-4deg); }
.tag-cloud-tags div:nth-child(3n) { transform:rotate(2deg); }
.tag-cloud-tags div:nth-child(4n) { transform:rotate(-5deg); }
.tag-cloud-tags div:nth-child(5n) { transform:rotate(-6deg); }
.tag-cloud-tags div:nth-child(6n) { transform:rotate(6deg); }

